--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Luna</string>
+    <string name="feed">Feed</string>
+    <string name="map">Map</string>
+    <string name="account">Account</string>
 </resources>
