--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="feed">Feed</string>
     <string name="map">Map</string>
     <string name="account">Account</string>
+    <string name="error_has_occured">Произошла ошибка</string>
 </resources>
