--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="error_has_occured">Произошла ошибка</string>
     <string name="repeat">Повторить</string>
     <string name="error_has_occured_while_data_loading">Произошла ошибка при загрузке данных</string>
+    <string name="added_to_favorites">Добавлено в избранное</string>
+    <string name="removed_from_favorites">Удалено из избранного</string>
 </resources>
