Improved bookmark button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="repeat">Повторить</string>
     <string name="error_has_occured_while_data_loading">Произошла ошибка при загрузке данных</string>
     <string name="added_to_favorites">Добавлено в избранное</string>
-    <string name="removed_from_favorites">Удалено из избранного</string>
+    <string name="removed_from_favorites">Убрано из избранного</string>
 </resources>
