--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="error_has_occured_while_data_loading">Произошла ошибка при загрузке данных</string>
     <string name="added_to_favorites">Добавлено в избранное</string>
     <string name="removed_from_favorites">Убрано из избранного</string>
+    <string name="types_of_manicure">Виды маникюра</string>
 </resources>
