--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="with_cover">С покрытием</string>
     <string name="without_cover">Без покрытия</string>
     <string name="service_option_with_price">%1$s . +%2$d₽</string>
+    <string name="login">Логин</string>
+    <string name="password">Пароль</string>
+    <string name="log_in">Войти</string>
 </resources>
