--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="passwords_dont_match">Пароли не совпадают</string>
     <string name="sign_up_successful">Регистрация успешна!</string>
     <string name="sign_up_failed">Произошла ошибка</string>
+    <string name="visit_options">Параметры посещения</string>
 </resources>
