--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="sign_up_successful">Регистрация успешна!</string>
     <string name="sign_up_failed">Произошла ошибка</string>
     <string name="visit_options">Параметры посещения</string>
+    <string name="about_master">О мастере</string>
 </resources>
