--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="sign_up_failed">Произошла ошибка</string>
     <string name="visit_options">Параметры посещения</string>
     <string name="about_master">О мастере</string>
+    <string name="make_an_appointment">Записаться</string>
 </resources>
