--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="types_of_manicure">Виды маникюра</string>
     <string name="with_cover">С покрытием</string>
     <string name="without_cover">Без покрытия</string>
-    <string name="service_option_with_price">%1$s . +%2$d₽</string>
     <string name="login">Логин</string>
     <string name="password">Пароль</string>
     <string name="log_in">Войти</string>
@@ -32,4 +31,5 @@
     <string name="search_for_masters_and_saloons">Поиск мастеров и салонов</string>
     <string name="services">Услуги</string>
     <string name="price_depends_on_master_qualification">Стоимость зависит от квалификации мастера (мастер-стилист, ведущий стилист, арт-директор)</string>
+    <string name="metro_with_address_template">%1$s. %2$s</string>
 </resources>
