--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="services">Услуги</string>
     <string name="price_depends_on_master_qualification">Стоимость зависит от квалификации мастера (мастер-стилист, ведущий стилист, арт-директор)</string>
     <string name="metro_with_address_template">%1$s. %2$s</string>
+    <string name="master_photos_counter_template">%1$d/%2$d</string>
 </resources>
