Salon activity is almost done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,9 @@
     <string name="passwords_dont_match">Пароли не совпадают</string>
     <string name="sign_up_successful">Регистрация успешна!</string>
     <string name="sign_up_failed">Произошла ошибка</string>
-    <string name="visit_options">Параметры посещения</string>
-    <string name="about_master">О мастере</string>
+    <string name="salon_visiting">ПОСЕЩЕНИЕ</string>
+    <string name="about_master">о мастере</string>
+    <string name="about_salon">о салоне</string>
     <string name="make_an_appointment">Записаться</string>
     <string name="search_for_masters_and_saloons">Поиск мастеров и салонов</string>
     <string name="services">Услуги</string>
